Added PWBasis wavefunction
git-svn-id: http://qmcpack.googlecode.com/svn@989 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -22,6 +22,7 @@ SET(WFSRCS
   ../QMCWaveFunctions/MolecularOrbitals/GridMolecularOrbitals.cpp
   ../QMCWaveFunctions/MolecularOrbitals/MolecularOrbitalBuilder.cpp
   ../QMCWaveFunctions/ElectronGasOrbitalBuilder.cpp
+  ../QMCWaveFunctions/PlaneWaveOrbitalBuilder.cpp
   ../QMCWaveFunctions/ThreeBodyGeminal.cpp
   ../QMCWaveFunctions/ThreeBodyGeminalBuilder.cpp
   ../QMCWaveFunctions/WaveFunctionFactory.cpp
@@ -44,6 +45,7 @@ ENDIF(NOT QMCPLUSPLUS_RELEASE)
 ####################################
 SET(DMCDRIVERS
   ../QMCDrivers/WalkerControlBase.cpp
+  ../QMCDrivers/MolecuDMC.cpp
   ../QMCDrivers/DMC/DMCMoveAll.cpp
   ../QMCDrivers/DMC/DMCPbyP.cpp
   ../QMCDrivers/DMC/DMCFactory.cpp
