*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@1047 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -62,6 +62,7 @@ QMC_WFS = \
   QMCWaveFunctions/ThreeBodyGeminalBuilder.cpp\
   QMCWaveFunctions/AGPDeterminant.cpp \
   QMCWaveFunctions/AGPDeterminantBuilder.cpp \
+  QMCWaveFunctions/PlaneWaveOrbitalBuilder.cpp \
   QMCWaveFunctions/WaveFunctionFactory.cpp 
  
 QMC_HAM = \
@@ -69,6 +70,10 @@ QMC_HAM = \
   QMCHamiltonians/LocalPPotential.cpp\
   QMCHamiltonians/NonLocalPPotential.cpp\
   QMCHamiltonians/LocalCorePolPotential.cpp \
+  QMCHamiltonians/LocalECPotential.cpp \
+  QMCHamiltonians/NonLocalECPotential.cpp \
+  QMCHamiltonians/ECPComponentBuilder.cpp \
+  QMCHamiltonians/ECPotentialBuilder.cpp \
   QMCHamiltonians/HamiltonianFactory.cpp
 
 QMC_DRIVERS = \
