*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@1064 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -61,6 +61,7 @@ SET(ENABLE_OPENMP 0)
 SET(HAVE_MPI 0)
 SET(HAVE_OOMPI 0)
 SET(HAVE_LIBXML2 0)
+SET(HAVE_LIBFFTW 0)
 SET(HAVE_LIBXMLPP 0)
 SET(HAVE_LIBHDF5 0)
 SET(HAVE_LIBSPRNG 0)
@@ -96,6 +97,7 @@ INCLUDE(${PROJECT_CMAKE}/FindLibxml2.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindLapack.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindHDF5.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
+INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
 
 IF(QMC_MPI)
   INCLUDE(${PROJECT_SOURCE_DIR}/CMake/addMPI.cmake)
@@ -114,6 +116,12 @@ IF(FOUND_BOOST)
   SET(HAVE_LIBBOOST 1)
   INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
 ENDIF(FOUND_BOOST)
+
+IF(FOUND_FFTW)
+  SET(HAVE_LIBFFTW 1)
+  INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
+  LINK_LIBRARIES(${FFTW_LIBRARY})
+ENDIF(FOUND_FFTW)
 
 IF(FOUND_HDF5)
   SET(HAVE_LIBHDF5 1)
