Add FFT-related macro.
git-svn-id: http://qmcpack.googlecode.com/svn@1065 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/ohmms-config.h.cmake.in
+++ b/trunk/src/ohmms-config.h.cmake.in
@@ -41,6 +41,9 @@
 /* Define to 1 if you have libxml2 */
 #cmakedefine HAVE_LIBXML2 @HAVE_LIBXML2@
 
+/* Define to 1 if you have fftw */
+#cmakedefine HAVE_LIBFFTW @HAVE_LIBFFTW@
+
 /* Define to 1 if you have libxml++ */
 #cmakedefine HAVE_LIBXMLPP @HAVE_LIBXMLPP@
 
