ready for major update; modified estimators
git-svn-id: http://qmcpack.googlecode.com/svn@1088 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -17,8 +17,8 @@ SET (EXECUTABLE_OUTPUT_PATH ${qmcPlusPlus_BINARY_DIR}/bin CACHE PATH "Single out
 
 ######################################################################
 #choose parallel mode
-######################################################################
-OPTION(QMC_MPI "Enable MPI library" OFF)
+######################
+OPTION(QMC_MPI "Enable MPI library" ON)
 OPTION(QMC_OMP "Enable OpenMP parallelization" OFF)
 
 ######################################################################
