*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@1127 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -54,7 +54,6 @@ IF(HAVE_LIBGSL)
 ENDIF(HAVE_LIBGSL)
 
 SET(WFSBASE
-  QMCWaveFunctions/JastrowBuilder.cpp
   QMCWaveFunctions/TrialWaveFunction.cpp
 )
 
@@ -92,7 +91,7 @@ ENDIF(HAVE_OOMPI)
 
 SUBDIRS(QMCApp)
 
-#do not build qmctools with mpi
-IF(NOT HAVE_MPI)
+#do not build qmctools with mpi or complex
+IF(NOT HAVE_MPI AND NOT QMC_COMPLEX)
   SUBDIRS(QMCTools)
-ENDIF(NOT HAVE_MPI)
+ENDIF(NOT HAVE_MPI AND NOT QMC_COMPLEX)
