Support for PWBasis Wavefunctions
git-svn-id: http://qmcpack.googlecode.com/svn@1135 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(WFSRCS
 IF(QMC_COMPLEX)
   SET(WFSRCS ${WFSRCS}
     ../QMCWaveFunctions/ElectronGasOrbitalBuilder.cpp
+    ../QMCWaveFunctions/PlaneWaveOrbitalBuilder.cpp
     ../QMCHamiltonians/LocalCorePolPotential.cpp
   )
 ELSE(QMC_COMPLEX)
