Add constraints and combo orbital classes.
git-svn-id: http://qmcpack.googlecode.com/svn@1218 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -11,6 +11,12 @@ SET(WFSRCS
   ../QMCWaveFunctions/NJABBuilder.cpp
   ../QMCWaveFunctions/LRTwoBodyJastrow.cpp
   ../QMCWaveFunctions/JAAPBCBuilder.cpp
+  ../QMCWaveFunctions/BasisSetBase.cpp
+  ../QMCWaveFunctions/ComboOrbital.cpp
+  ../QMCWaveFunctions/OrbitalConstraintsBase.cpp
+  ../QMCWaveFunctions/PadeConstraints.cpp
+  ../QMCWaveFunctions/TwoBodyJastrowBuilder.cpp
+  ../QMCWaveFunctions/RPAConstraints.cpp
   ../QMCWaveFunctions/WaveFunctionFactory.cpp
   ../QMCHamiltonians/HamiltonianFactory.cpp
 )
