Add cpp files of the classes to handle inheritance-based single-particle orbitals and DiracDeterminantBase.
git-svn-id: http://qmcpack.googlecode.com/svn@1267 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -18,6 +18,14 @@ SET(WFSRCS
   ../QMCWaveFunctions/TwoBodyJastrowBuilder.cpp
   ../QMCWaveFunctions/RPAConstraints.cpp
   ../QMCWaveFunctions/WaveFunctionFactory.cpp
+  ../QMCWaveFunctions/SPOSetBase.cpp
+  ../QMCWaveFunctions/BasisSetFactory.cpp
+  ../QMCWaveFunctions/Fermion/DiracDeterminantBase.cpp
+  ../QMCWaveFunctions/Fermion/SlaterDet.cpp
+  ../QMCWaveFunctions/Fermion/SlaterDetBuilder.cpp
+  ../QMCWaveFunctions/MolecularOrbitals/STOBuilder.cpp
+  ../QMCWaveFunctions/MolecularOrbitals/GTOBuilder.cpp
+  ../QMCWaveFunctions/MolecularOrbitals/NGOBuilder.cpp
   ../QMCHamiltonians/HamiltonianFactory.cpp
 )
 
