Some changes to QMCInterface
git-svn-id: http://qmcpack.googlecode.com/svn@1288 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -14,6 +14,7 @@ QMCPP_UTILITIES = \
   OhmmsApp/ProjectData.cpp \
   OhmmsApp/RandomNumberControl.cpp\
   Numerics/OhmmsBlas.cpp \
+	Numerics/FFTEngines.h \
   Platforms/sysutil.cpp \
   QMCFactory/OneDimGridFactory.cpp
    
