--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -112,7 +112,7 @@ INCLUDE(${PROJECT_CMAKE}/FindLibxml2.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindLapack.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindHDF5.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
-INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
+#INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
 
 IF(QMC_MPI)
   INCLUDE(${PROJECT_SOURCE_DIR}/CMake/addMPI.cmake)
@@ -132,11 +132,11 @@ IF(FOUND_BOOST)
   INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
 ENDIF(FOUND_BOOST)
 
-IF(FOUND_FFTW)
-  SET(HAVE_LIBFFTW 1)
-  INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
-  LINK_LIBRARIES(${FFTW_LIBRARY})
-ENDIF(FOUND_FFTW)
+#IF(FOUND_FFTW)
+#  SET(HAVE_LIBFFTW 1)
+#  INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
+#  LINK_LIBRARIES(${FFTW_LIBRARY})
+#ENDIF(FOUND_FFTW)
 
 IF(FOUND_HDF5)
   SET(HAVE_LIBHDF5 1)
