Add a source file to compile.
git-svn-id: http://qmcpack.googlecode.com/svn@1320 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -57,6 +57,7 @@ ELSE(QMC_COMPLEX)
     ../QMCHamiltonians/LocalCorePolPotential.cpp
     ../QMCHamiltonians/NonLocalPPotential.cpp
     ../QMCHamiltonians/LocalECPotential.cpp
+    ../QMCHamiltonians/NonLocalECPComponent.cpp
     ../QMCHamiltonians/NonLocalECPotential.cpp
     ../QMCHamiltonians/ECPotentialBuilder.cpp
     ../QMCHamiltonians/ECPComponentBuilder.cpp
