cmake does not accept ++ for IF/ENDIF
git-svn-id: http://qmcpack.googlecode.com/svn@1401 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -115,10 +115,10 @@ IF($ENV{CXX} MATCHES "icpc")
   INCLUDE(${PROJECT_CMAKE}/Intel8.cmake)
   SET(FOUND_CXXENV 1)
 ENDIF($ENV{CXX} MATCHES "icpc")
-IF($ENV{CXX} MATCHES "cmpic++")
+IF($ENV{CXX} MATCHES "cmpic")
   INCLUDE(${PROJECT_CMAKE}/Intel8.cmake)
   SET(FOUND_CXXENV 1)
-ENDIF($ENV{CXX} MATCHES "cmpic++")
+ENDIF($ENV{CXX} MATCHES "cmpic")
 IF($ENV{CXX} MATCHES "xlC")
   INCLUDE(${PROJECT_CMAKE}/IBMCompilers.cmake)
   SET(FOUND_CXXENV 1)
