Added Ylm.cpp to list of files to be compiled.
git-svn-id: http://qmcpack.googlecode.com/svn@1434 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -32,6 +32,7 @@ SET(WFSRCS
   ../QMCHamiltonians/CoulombPBCABTemp.cpp
   ../QMCHamiltonians/LocalCorePolPotential.cpp
   ../QMCHamiltonians/HamiltonianFactory.cpp
+  ../QMCHamiltonians/Ylm.cpp
   ../Estimators/LocalEnergyEstimator.cpp
   ../Estimators/ScalarEstimatorManager.cpp
 )
@@ -42,6 +43,11 @@ IF(QMC_COMPLEX)
     ../QMCWaveFunctions/PlaneWaveOrbitalBuilder.cpp
     ../QMCWaveFunctions/PlaneWave/PWOrbitalBuilder.cpp
     ../QMCWaveFunctions/PlaneWave/PWOrbitalSet.cpp
+    ../QMCHamiltonians/LocalECPotential.cpp
+    ../QMCHamiltonians/NonLocalECPComponent.cpp
+    ../QMCHamiltonians/NonLocalECPotential.cpp
+    ../QMCHamiltonians/ECPotentialBuilder.cpp
+    ../QMCHamiltonians/ECPComponentBuilder.cpp
   )
 ELSE(QMC_COMPLEX)
   SET(WFSRCS ${WFSRCS}
