--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -32,6 +32,7 @@ SET(PARTICLE
   LongRange/KContainer.cpp
   LongRange/StructFact.cpp
   LongRange/LRCoulombSingleton.cpp
+  LongRange/LRJastrowSingleton.cpp
 )
 
 SET(PARTICLEIO
