Added RQMCMultipleEstimator to handle RQMC energy differences with correlated sampling. Needs to be tested further at this point.
git-svn-id: http://qmcpack.googlecode.com/svn@1524 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -102,6 +102,7 @@ QMC_DRIVERS = \
   QMCDrivers/RQMCMultiple.cpp \
   QMCDrivers/MultiChain.cpp \
   Estimators/MultipleEnergyEstimator.cpp \
+	Estimators/RQMCMultipleEstimator.cpp \
   QMCDrivers/SpaceWarp.cpp \
   QMCDrivers/VMCMultipleWarp.cpp \
   QMCDrivers/VMCPbyPMultiWarp.cpp \
